traces/bug_244.txt
examples++-load/iohdf5.cpp:249: error: DEAD_STORE
  The value written to &trans (type int) is never used.
Showing all 1 steps of the trace


examples++-load/iohdf5.cpp:249:7: Write of unused value
247.       { 
248.         //Hyp A
249.         int trans=-1;
             ^
250.         if(l[i].nbfloat==2)
251.     	{
